# FieldApp

./: .gitignore  docker-compose.yml  nginx.conf  response.json
mobile-android/: ReactivePipeline.kt
mobile-ios/: ReactivePipeline.swift
mobile-ios/FieldAppPrime/FieldAppPrime/: ContentView.swift  FieldAppPrimeApp.swift
mobile-ios/FieldAppPrime/FieldAppPrime.xcodeproj/: project.pbxproj
plan/: docker.md  pm_playbook.md  project_context.md  todo.md
plan/ai_prompts/: create_ios_record_type.md  metadata_md_to_init_sql.md
plan/specs/: 50_000_ft_plan.md  epic_1.md  epic_1_mvp_scenario.md  epics.md  model_.md  schema.md  schema.ts  sync_architecture.md
scripts/: init_db.sh
server/: Cargo.toml  Dockerfile  init.generated.sql  init.sql  package-lock.json  package.json  tsconfig.json
server-swift/FieldPrimeServer/: Dockerfile  Package.resolved  Package.swift
server/src/: fetching.rs  index.ts  main.rs  models.rs  server.ts
server/src/db/: attachments.ts  batchSync.ts  customers.ts  jobEvents.ts  jobs.ts  system.ts  users.ts
server/src/middleware/: jwt.ts
server/src/routes/: data_result.generated.rs  data_result.rs  health.ts  mod.rs  resources.ts  seed.rs  seed_db.rs  seed_epic1_db.rs  sync.rs  sync.ts
server/src/types/: errors.ts  sync.ts
server/src/utils/: database.ts
shared/: .gitignore  Package.resolved  Package.swift  schema.json  sync-contract.json
shared/Sources/Insieme/: Hashing.swift  (+5 more)
tools/schema-codegen/: package-lock.json  package.json
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
(+64 files in other folders)
